--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -35,45 +35,75 @@
             android:orientation="horizontal">
             <ImageButton
                 android:id="@+id/imageView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="190dp"
+                android:layout_height="350dp"
                 android:layout_marginLeft="15dp"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="5dp"
                 android:scaleType="fitXY"
                 android:src="@drawable/img8" />
 
             <ImageButton
                 android:id="@+id/imageView2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
+                android:layout_width="190dp"
+                android:layout_height="350dp"
                 android:src="@drawable/img7"
                 android:scaleType="fitXY"
-                android:layout_marginTop="15dp"/>
+                android:layout_marginTop="5dp"
+                android:layout_marginRight="5dp"
+                />
         </LinearLayout>
 
 
 
-        <ImageButton
-            android:id="@+id/imageView1"
-            android:layout_marginLeft="15dp"
-            android:layout_width="250dp"
-            android:layout_height="250dp"
-            android:src="@drawable/img5"
-            android:scaleType="fitXY"
-            android:layout_marginTop="15dp"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+            <ImageButton
+                android:id="@+id/imageView1"
+                android:layout_marginLeft="15dp"
+                android:layout_width="190dp"
+                android:layout_height="190dp"
+                android:src="@drawable/img5"
+                android:scaleType="fitXY" />
+
+            <ImageButton
+                android:id="@+id/imageView6"
+                android:layout_marginRight="5dp"
+                android:layout_width="190dp"
+                android:layout_height="190dp"
+                android:src="@drawable/img3"
+                android:scaleType="fitXY"
+                />
 
 
-        <ImageButton
-            android:id="@+id/imageView6"
-            android:layout_marginLeft="15dp"
-            android:layout_width="250dp"
-            android:layout_height="250dp"
-            android:src="@drawable/img3"
-            android:scaleType="fitXY"
-            android:layout_marginTop="15dp"/>
+
+
+        </LinearLayout>
 
 
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+            <ImageButton
+                android:id="@+id/imageView65"
+                android:layout_width="190dp"
+                android:layout_height="350dp"
+                android:layout_marginLeft="15dp"
+                android:scaleType="fitXY"
+                android:src="@drawable/img_9" />
+
+            <ImageButton
+                android:id="@+id/imageView30"
+                android:layout_width="190dp"
+                android:layout_height="350dp"
+                android:src="@drawable/img11"
+                android:scaleType="fitXY"
+                android:layout_marginRight="5dp"
+                />
+        </LinearLayout>
     </LinearLayout>
 </ScrollView>
