--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -1,109 +1,156 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+
+
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
+    android:layout_height="fill_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
+        android:layout_height="55dp"
+        android:background="#d0d0d0">
 
-        >
+        <ImageButton
+            android:id="@+id/imageView44"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
+            android:layout_marginLeft="65dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/house_outline"/>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:orientation="horizontal"
-            android:gravity="center_horizontal">
+        <ImageButton
+            android:id="@+id/imageView45"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
+            android:layout_marginLeft="20dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/search"/>
 
-            <TextView
-                android:id="@+id/textView1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical|center_horizontal"
-                android:text="主畫面"
-                android:layout_marginTop="15dp"
-                android:textSize="30dp" />
-        </LinearLayout>
+        <ImageButton
+            android:id="@+id/imageView47"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
+            android:layout_marginLeft="20dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/check_form"/>
 
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-            <ImageButton
-                android:id="@+id/imageView"
-                android:layout_width="190dp"
-                android:layout_height="350dp"
-                android:layout_marginLeft="15dp"
-                android:layout_marginTop="5dp"
-                android:scaleType="fitXY"
-                android:src="@drawable/img8" />
-
-            <ImageButton
-                android:id="@+id/imageView2"
-                android:layout_width="190dp"
-                android:layout_height="350dp"
-                android:src="@drawable/img7"
-                android:scaleType="fitXY"
-                android:layout_marginTop="5dp"
-                android:layout_marginRight="5dp"
-                />
-        </LinearLayout>
+        <ImageButton
+            android:id="@+id/imageView48"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
+            android:layout_marginLeft="20dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/user"/>
 
 
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-            <ImageButton
-                android:id="@+id/imageView1"
-                android:layout_marginLeft="15dp"
-                android:layout_width="190dp"
-                android:layout_height="190dp"
-                android:src="@drawable/img5"
-                android:scaleType="fitXY" />
-
-            <ImageButton
-                android:id="@+id/imageView6"
-                android:layout_marginRight="5dp"
-                android:layout_width="190dp"
-                android:layout_height="190dp"
-                android:src="@drawable/img3"
-                android:scaleType="fitXY"
-                />
-
-
-
-
-        </LinearLayout>
-
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-            <ImageButton
-                android:id="@+id/imageView65"
-                android:layout_width="190dp"
-                android:layout_height="350dp"
-                android:layout_marginLeft="15dp"
-                android:scaleType="fitXY"
-                android:src="@drawable/img_9" />
-
-            <ImageButton
-                android:id="@+id/imageView30"
-                android:layout_width="190dp"
-                android:layout_height="350dp"
-                android:src="@drawable/img11"
-                android:scaleType="fitXY"
-                android:layout_marginRight="5dp"
-                />
-        </LinearLayout>
     </LinearLayout>
-</ScrollView>
+
+
+    <ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_marginTop="55dp">
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            >
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:gravity="center_horizontal"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textView1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
+                    android:gravity="center_vertical|center_horizontal"
+                    android:text="主畫面"
+                    android:textSize="30dp" />
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <ImageButton
+                    android:id="@+id/imageView"
+                    android:layout_width="190dp"
+                    android:layout_height="350dp"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginTop="5dp"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/img8" />
+
+                <ImageButton
+                    android:id="@+id/imageView2"
+                    android:layout_width="190dp"
+                    android:layout_height="350dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginRight="5dp"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/img7" />
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <ImageButton
+                    android:id="@+id/imageView1"
+                    android:layout_width="190dp"
+                    android:layout_height="190dp"
+                    android:layout_marginLeft="15dp"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/img5" />
+
+                <ImageButton
+                    android:id="@+id/imageView6"
+                    android:layout_width="190dp"
+                    android:layout_height="190dp"
+                    android:layout_marginRight="5dp"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/img3" />
+
+
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <ImageButton
+                    android:id="@+id/imageView65"
+                    android:layout_width="190dp"
+                    android:layout_height="350dp"
+                    android:layout_marginLeft="15dp"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/img_9" />
+
+                <ImageButton
+                    android:id="@+id/imageView30"
+                    android:layout_width="190dp"
+                    android:layout_height="350dp"
+                    android:layout_marginRight="5dp"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/img11" />
+            </LinearLayout>
+
+
+        </LinearLayout>
+
+    </ScrollView>
+
+
+</RelativeLayout>
