--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -86,6 +86,7 @@
                     android:layout_height="350dp"
                     android:layout_marginLeft="15dp"
                     android:layout_marginTop="5dp"
+                    android:onClick="information"
                     android:scaleType="fitXY"
                     android:src="@drawable/img8" />
 
