--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -31,8 +31,9 @@
             android:layout_width="55dp"
             android:layout_height="55dp"
             android:layout_marginLeft="20dp"
+            android:onClick="order"
             android:scaleType="fitXY"
-            android:src="@drawable/check_form"/>
+            android:src="@drawable/check_form" />
 
         <ImageButton
             android:id="@+id/imageView48"
