--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,13 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent" >
+
 <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    tools:context=".Register"
+
+
 
     xmlns:android="http://schemas.android.com/apk/res/android">
+
+
 
     <TextView
         android:id="@+id/textView1"
@@ -15,14 +24,24 @@
         android:layout_height="wrap_content"
         android:text="會員註冊"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="30dp" />
+        android:textSize="30dp"
+        android:layout_marginTop="5dp"/>
 
 
     <ImageView
         android:id="@+id/imageView"
+        android:layout_marginTop="5dp"
         android:layout_width="278dp"
         android:layout_height="269dp"
-        app:srcCompat="@drawable/zebra0" />
+
+         />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="5dp"
+        android:text="上傳照片"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -35,17 +54,20 @@
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="姓名:"
+            android:text="姓名:  "
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textSize="20dp" />
 
+
         <EditText
-            android:id="@+id/editText2"
+            android:id="@+id/priceText"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:gravity="center"
-            android:inputType="textPersonName" />
+            android:gravity="left|top"
+            android:hint="請輸入姓名..."
+            android:inputType="text"
+            android:maxLength="6" />
 
 
     </LinearLayout>
@@ -62,17 +84,19 @@
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="手機:"
+            android:text="手機:  "
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textSize="20dp" />
 
         <EditText
-            android:id="@+id/editText3"
+            android:id="@+id/priceText123"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:gravity="center"
-            android:inputType="textPersonName" />
+            android:gravity="left|top"
+            android:hint="請輸入電話..."
+            android:inputType="number"
+            android:maxLength="10" />
 
 
     </LinearLayout>
@@ -88,17 +112,19 @@
             android:id="@+id/textView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Email:"
+            android:text="Email:  "
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textSize="20dp" />
 
         <EditText
-            android:id="@+id/editText5"
+            android:id="@+id/priceText44"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:gravity="center"
-            android:inputType="textPersonName" />
+            android:gravity="left|top"
+            android:hint="請輸入信箱..."
+            android:inputType="textEmailSubject"
+            android:maxLength="6" />
 
 
     </LinearLayout>
@@ -114,23 +140,102 @@
             android:id="@+id/textView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="地址:"
+            android:text="地址:  "
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textSize="20dp" />
 
         <EditText
-            android:id="@+id/editText6"
+            android:id="@+id/priceText52"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:gravity="center"
-            android:inputType="textPersonName" />
+            android:gravity="left|top"
+            android:hint="請輸入地址..."
+            android:inputType="text"
+            android:maxLength="6" />
 
 
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="47dp"
+        android:layout_marginTop="10dp"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView55"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="帳號:  "
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textSize="20dp" />
+
+        <EditText
+            android:id="@+id/priceText446"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:gravity="left|top"
+            android:hint="請輸入帳號..."
+            android:inputType="text"
+            android:maxLength="10" />
 
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="47dp"
+        android:layout_marginTop="10dp"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView54"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="密碼:  "
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textSize="20dp" />
+
+        <EditText
+            android:id="@+id/priceText47"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:gravity="left|top"
+            android:hint="請輸入密碼..."
+            android:inputType="textPassword"
+            android:maxLength="10" />
+
+
+    </LinearLayout>
+
+    <LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingTop="5dp"
+    android:orientation="horizontal">
+
+    <Button
+        android:id="@+id/button_yes"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:text="確認"
+        />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:text="清除" />
+
+</LinearLayout>
 
 
 </LinearLayout>
+
+</ScrollView>
