--- a/app/src/main/res/layout/activity_fill_order.xml
+++ b/app/src/main/res/layout/activity_fill_order.xml
@@ -117,7 +117,7 @@
                 android:text="清空" />
 
             <Button
-                android:id="@+id/button4"
+                android:id="@+id/button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
