第九次commit (介面更改)

--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -10,6 +10,7 @@
         android:layout_height="55dp"
         android:background="#d0d0d0">
 
+
         <ImageButton
             android:id="@+id/imageView44"
             android:layout_width="55dp"
@@ -57,6 +58,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
+            android:background="@drawable/img_background"
             >
 
             <LinearLayout
