--- a/app/src/main/res/layout/activity_fill_order.xml
+++ b/app/src/main/res/layout/activity_fill_order.xml
@@ -1,8 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="@drawable/img_background">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:background="#d0d0d0">
+
+        <ImageButton
+            android:id="@+id/imageView44"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
+            android:layout_marginLeft="65dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/house_outline"/>
+
+        <ImageButton
+            android:id="@+id/imageView45"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
+            android:layout_marginLeft="20dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/search"/>
+
+        <ImageButton
+            android:id="@+id/imageView47"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
+            android:layout_marginLeft="20dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/check_form"/>
+
+        <ImageButton
+            android:id="@+id/imageView48"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
+            android:layout_marginLeft="20dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/user"/>
+
+
+    </LinearLayout>
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" >
+
+
 
 
 <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -12,6 +58,7 @@
     android:orientation="vertical"
     android:gravity="center"
     tools:context=".FillOrder"
+    android:layout_marginTop="55dp"
 
     xmlns:android="http://schemas.android.com/apk/res/android">
 
@@ -137,3 +184,5 @@
 </LinearLayout>
 
 </ScrollView>
+
+</RelativeLayout>
