--- a/app/src/main/res/layout/activity_fill_project.xml
+++ b/app/src/main/res/layout/activity_fill_project.xml
@@ -3,19 +3,24 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
+    android:layout_height="fill_parent"
+    android:background="@drawable/img_background">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:gravity="center">
+        android:gravity="center"
+        >
+
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="80dp"
             android:gravity="center"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            >
+
 
 
             <TextView
