--- a/app/src/main/res/layout/activity_fill_project.xml
+++ b/app/src/main/res/layout/activity_fill_project.xml
@@ -43,13 +43,13 @@
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
                 android:layout_gravity="center"
+                android:layout_weight="1"
                 >
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:orientation="vertical"
                     android:layout_gravity="center_horizontal"
-                    android:layout_weight="1"
                     >
                     <CheckBox
                         android:layout_width="wrap_content"
@@ -77,21 +77,28 @@
                         android:layout_height="wrap_content"
                         android:text="寵物"
                         android:layout_marginTop="10dp"
-                        android:layout_marginBottom="30dp"
+                        android:layout_gravity="center" />
+                    <Button
+                        android:id="@id/button2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="上傳作品集"
                         android:layout_gravity="center" />
                 </LinearLayout>
 
                 <ImageView
-                    android:id="@+id/imageView3"
-                    android:layout_width="100dp"
-                    android:layout_height="208dp"
+                    android:id="@+id/imageView"
+                    android:layout_width="140dp"
+                    android:layout_height="230dp"
                     android:layout_gravity="center"
                     android:layout_margin="30dp"
                     android:layout_weight="1"
-                    android:scaleType="fitXY"
-                    app:srcCompat="@drawable/img01" />
+                    android:scaleType="fitXY" />
+
+
 
             </LinearLayout>
+
         </LinearLayout>
 
         <LinearLayout
@@ -106,7 +113,8 @@
                 android:layout_margin="20dp"
                 android:layout_gravity="center"
                 android:singleLine="false"
-                android:hint="輸入說明文字"
+                android:hint="      輸入說明文字"
+                android:background="@drawable/img_1234"
                 />
 
 
