--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -29,13 +29,14 @@
         android:layout_marginTop="5dp"/>
 
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_marginTop="5dp"
-        android:layout_width="278dp"
-        android:layout_height="269dp"
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_marginTop="5dp"
+            android:layout_width="278dp"
+            android:layout_height="269dp" />
+    
 
-         />
+
 
     <Button
         android:id="@+id/button"
