--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -111,6 +111,34 @@
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/textView557"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="身份證:"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textSize="20dp" />
+
+        <EditText
+            android:id="@+id/priceText49"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:gravity="left|top"
+            android:hint="請輸入身份證字號..."
+            android:inputType="text"
+            android:maxLength="10" />
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="47dp"
+        android:layout_marginTop="10dp"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <TextView
             android:id="@+id/textView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -146,6 +174,8 @@
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textSize="20dp" />
 
+
+
         <EditText
             android:id="@+id/priceText52"
             android:layout_width="250dp"
@@ -155,6 +185,9 @@
             android:hint="請輸入地址..."
             android:inputType="text"
             android:maxLength="6" />
+
+
+
 
 
     </LinearLayout>
