--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -259,14 +259,17 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:text="確認"
+        android:text="清除"
         />
 
+
     <Button
+        android:id="@+id/btn"
+        android:layout_below="@+id/helloWorld"
+        android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
         android:layout_weight="1"
-        android:text="清除" />
+        android:text="確認" />
 
 </LinearLayout>
 
