--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,10 +11,10 @@
 
 
     <ImageView
-        android:layout_width="120dp"
-        android:layout_height="120dp"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
         android:scaleType="fitXY"
-        android:src="@drawable/img_icon"/>
+        android:src="@drawable/img_home"/>
 
 
 
@@ -44,22 +44,33 @@
     <Button
         android:id="@+id/btn_Login"
         android:layout_width="220dp"
-        android:layout_height="38dp"
-        android:layout_marginTop="20dp"
+        android:layout_height="40dp"
+        android:background="@drawable/btn"
         android:onClick="homepage"
+        android:shadowColor="#000000"
+        android:shadowDx="0"
+        android:shadowDy="0"
+        android:shadowRadius="5"
         android:text="登入"
-        android:background="#00BBFF"/>>
-
+        android:textColor="#FFFFFF"
+        android:textSize="20sp"
+        android:layout_marginTop="60dp"/>
 
 
     <Button
         android:id="@+id/btn_Login2"
         android:layout_width="220dp"
-        android:layout_height="38dp"
+        android:layout_height="40dp"
         android:layout_marginTop="10dp"
+        android:background="@drawable/btn"
         android:onClick="fillProject"
+        android:shadowColor="#000000"
+        android:shadowDx="0"
+        android:shadowDy="0"
+        android:shadowRadius="5"
         android:text="google登入"
-        android:background="#00BBFF"/>>
+        android:textColor="#FFFFFF"
+        android:textSize="20sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
