--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -33,7 +33,7 @@
             android:layout_width="55dp"
             android:layout_height="55dp"
             android:layout_marginLeft="20dp"
-            android:onClick="order"
+            android:onClick="orderlist"
             android:scaleType="fitXY"
             android:src="@drawable/check_form" />
 
