--- a/app/src/main/res/layout/activity_information.xml
+++ b/app/src/main/res/layout/activity_information.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@drawable/img_background">
+    android:background="@drawable/app_bg">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -81,8 +81,9 @@
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="10dp"
+            android:gravity="center"
+            android:background="@drawable/radius"
+            android:padding="10dp"
             android:orientation="horizontal">
 
 
@@ -90,110 +91,161 @@
                 android:id="@+id/imageView3"
                 android:layout_width="10dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:layout_marginLeft="0dp"
-                android:src="@drawable/user"/>
+                android:layout_weight="1"
+                android:onClick="contact"
+                android:src="@drawable/user" />
 
             <TextView
                 android:id="@+id/textView6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
                 android:layout_marginLeft="10dp"
                 android:layout_weight="1"
+                android:onClick="contact"
                 android:text="cycsponge" />
 
-            <ImageButton
-                android:id="@+id/imageButton2"
-                android:layout_width="5dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="170dp"
-                android:layout_marginTop="8dp"
-                android:layout_weight="1"
-
-                app:srcCompat="@android:drawable/stat_notify_chat" />
         </LinearLayout>
         <LinearLayout
-            android:layout_width="350dp"
-            android:layout_height="400dp"
-            android:layout_marginLeft="10dp"
+            android:id="@+id/activity_main"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_marginTop="10dp"
-            android:layout_marginRight="10dp"
-            android:orientation="horizontal"
             android:gravity="center"
-            android:background="@drawable/img_1234"
-            >
+            android:background="@drawable/radius"
+            android:layout_margin="10dp"
+            android:orientation="vertical">
+            <LinearLayout
+                android:layout_width="350dp"
+                android:layout_height="400dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
+                android:orientation="horizontal"
+                android:gravity="center"
 
-            <ImageView
-                android:id="@+id/imageView4"
-                android:layout_width="250dp"
-                android:layout_height="375dp"
-                app:srcCompat="@drawable/img8"
-                android:scaleType="fitXY"
-                />
-        </LinearLayout>
+                >
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="205dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="10dp"
-            android:orientation="horizontal">
-            <ScrollView
-                xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent" >
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="15dp"
-                    android:layout_marginRight="15dp"
-                    >
+                <ImageView
+                    android:id="@+id/imageView4"
+                    android:layout_width="250dp"
+                    android:layout_height="375dp"
+                    app:srcCompat="@drawable/img8"
+                    android:scaleType="fitXY"
+                    />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
+                android:orientation="horizontal"
+                android:gravity="center">
 
-                    <TextView
-                        android:id="@+id/textView7"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="0dp"
-                        android:text="    狼是社會性的獵食動物，狼群以核心家庭的形式組成，包括一對配偶、及其子女，有時也包括收養的未成年幼狼。狼屬於典型的食物鏈上層掠食者。在它們的棲息地中，只有人類和老虎對它們構成實質威脅。它們通常群體行動，由於狼會捕食羊等家畜，因此直到20世紀末期前都被人類大量捕殺，一些亞種如日本狼、紐芬蘭狼等都已經絕種，雖然有一些其它亞種已經確認，但亞種的確切數量仍舊未定。"
-                        android:textAppearance="?android:attr/textAppearanceLarge"
-                        android:textSize="20dp" />
+                <TextView
+                    android:id="@+id/title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="狼"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textSize="30dp" />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="205dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
+                android:orientation="horizontal">
+                <ScrollView
+                    xmlns:android="http://schemas.android.com/apk/res/android"
+                    xmlns:app="http://schemas.android.com/apk/res-auto"
+                    xmlns:tools="http://schemas.android.com/tools"
+                    android:layout_width="fill_parent"
+                    android:background="@drawable/radius"
+                    android:layout_height="fill_parent" >
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginLeft="15dp"
+                        android:layout_marginRight="15dp"
 
-                </LinearLayout>
+                        >
+
+                        <TextView
+                            android:id="@+id/textView7"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="0dp"
+                            android:padding="10dp"
+                            android:text="    狼是社會性的獵食動物，狼群以核心家庭的形式組成，包括一對配偶、及其子女，有時也包括收養的未成年幼狼。狼屬於典型的食物鏈上層掠食者。在它們的棲息地中，只有人類和老虎對它們構成實質威脅。它們通常群體行動，由於狼會捕食羊等家畜，因此直到20世紀末期前都被人類大量捕殺，一些亞種如日本狼、紐芬蘭狼等都已經絕種，雖然有一些其它亞種已經確認，但亞種的確切數量仍舊未定。"
+                            android:textAppearance="?android:attr/textAppearanceLarge"
+                            android:textSize="20dp" />
+
+                    </LinearLayout>
 
 
-            </ScrollView>
+                </ScrollView>
 
 
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="10dp"
-            android:orientation="horizontal">
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
+                android:gravity="center"
+                android:orientation="horizontal">
 
 
-            <ImageButton
-                android:id="@+id/imageButton3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="0dp"
-                app:srcCompat="@android:drawable/checkbox_on_background" />
+                <ImageButton
+                    android:id="@+id/imageButton3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="0dp"
+                    app:srcCompat="@android:drawable/checkbox_on_background" />
+                <TextView
+                    android:id="@+id/textView8"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="0dp"
+                    android:layout_marginTop="5dp"
+                    android:text="動物"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textSize="20dp" />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:layout_margin="10dp"
+                android:gravity="center"
+                android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/textView8"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="0dp"
-                android:layout_marginTop="5dp"
-                android:text="動物"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textSize="20dp" />
+                <TextView
+                    android:id="@+id/textView2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="最終價格："
+                    android:textColor="#000000"
+                    android:layout_marginLeft="20dp"
+                    android:textSize="20dp" />
+
+                <TextView
+                    android:id="@+id/Order_Price"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="$1500"
+                    android:textColor="#000000"
+                    android:layout_marginLeft="5dp"
+                    android:textSize="20dp" />
+
+            </LinearLayout>
+
         </LinearLayout>
 
 
