--- a/app/src/main/res/layout/activity_fill_project.xml
+++ b/app/src/main/res/layout/activity_fill_project.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_height="fill_parent"
+    android:background="@drawable/app_bg">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -25,6 +26,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="新增作品集資訊"
+                android:textColor="#000000"
                 android:textSize="30dp" />
         </LinearLayout>
 
@@ -48,13 +50,15 @@
                     android:layout_width="140dp"
                     android:layout_height="230dp"
                     android:layout_gravity="center"
+                    android:background="@drawable/img_upload"
                     android:layout_margin="30dp"
                     android:layout_weight="1"
                     android:scaleType="fitXY" />
                 <Button
                     android:id="@id/button2"
-                    android:layout_width="wrap_content"
+                    android:layout_width="100dp"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/radius"
                     android:text="上傳作品"
                     android:layout_marginRight="30dp"
                     android:layout_gravity="center" />
@@ -97,13 +101,50 @@
                 android:layout_weight="1"
                 />
         </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginTop="10dp"
+            android:layout_margin="10dp"
+            android:background="@drawable/edittext"
+            android:orientation="horizontal"
+            android:layout_gravity="center"
+            >
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="標題："
+                android:layout_marginTop="7dp"
+                android:layout_marginLeft="15dp"
+                android:textColor="#000000"
+                android:textSize="20dp" />
+            <EditText
+                android:id="@+id/edittext1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:hint="請輸入標題"
+                android:inputType="number" />
 
+        </LinearLayout>
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_gravity="center"
+            android:layout_margin="10dp"
+            android:hint="輸入說明文字"
+            android:background="@drawable/radius"
+            android:singleLine="false" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="70dp"
-            android:orientation="horizontal"
-            android:layout_gravity="center">
+            android:layout_margin="10dp"
+            android:layout_gravity="center"
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/textView2"
@@ -111,16 +152,16 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="價格："
-                android:textSize="20dp"
-                />
+                android:textColor="#000000"
+                android:textSize="20dp" />
+
             <EditText
                 android:id="@+id/priceText52"
-                android:layout_width="200dp"
+                android:layout_width="230dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:hint="請輸入價格"
-                android:inputType="number"
-                />
+                android:inputType="number" />
 
             <Spinner
                 android:id="@+id/spinner"
@@ -131,14 +172,6 @@
 
 
         </LinearLayout>
-
-        <EditText
-            android:layout_width="350dp"
-            android:layout_height="200dp"
-            android:layout_gravity="center"
-            android:layout_margin="20dp"
-            android:hint="      輸入說明文字"
-            android:singleLine="false" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -156,12 +189,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:background="@drawable/radius"
                 android:text="回上頁" />
 
             <Button
                 android:id="@+id/button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="@drawable/radius"
                 android:layout_weight="1"
                 android:text="上傳" />
 
