--- a/app/src/main/res/layout/activity_view_order.xml
+++ b/app/src/main/res/layout/activity_view_order.xml
@@ -42,52 +42,44 @@
             android:layout_marginLeft="20dp"
             android:scaleType="fitXY"
             android:src="@drawable/user"/>
-
-
     </LinearLayout>
     <ScrollView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
+        android:layout_marginTop="55dp"
         >
-
-
-
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:gravity="center"
-            tools:context=".FillOrder"
-            android:layout_marginTop="55dp"
-
             >
-
             <TextView
-                android:id="@+id/show"
+                android:id="@+id/textView1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="訂單填寫"
+                android:text="訂單資訊"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="10dp"
                 android:textSize="30dp" />
-
-
             <LinearLayout
                 android:id="@+id/activity_main"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="10dp"
                 android:gravity="center"
+                android:background="@drawable/radius"
+                android:layout_margin="10dp"
                 android:orientation="vertical">
-
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:layout_margin="10dp"
                     android:layout_gravity="center"
                     android:orientation="horizontal">
-
                     <TextView
                         android:id="@+id/textView21"
                         android:layout_width="wrap_content"
@@ -97,27 +89,22 @@
                         android:textColor="#000000"
                         android:layout_marginLeft="20dp"
                         android:textSize="20dp" />
-
-                    <EditText
-                        android:id="@+id/Text_name"
-                        android:layout_width="230dp"
+                    <TextView
+                        android:id="@+id/Order_Name"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:ems="10"
-                        android:hint="請輸入專案名稱"
-                        android:gravity="left"
-                        android:inputType="text"
+                        android:gravity="center"
+                        android:text="藝術品"
+                        android:textColor="#000000"
                         android:layout_marginLeft="5dp"
-                        android:maxLength="6" />
-
+                        android:textSize="20dp" />
                 </LinearLayout>
-
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:layout_gravity="center"
                     android:layout_margin="10dp"
                     android:orientation="horizontal">
-
                     <TextView
                         android:id="@+id/textView3"
                         android:layout_width="wrap_content"
@@ -127,22 +114,17 @@
                         android:textColor="#000000"
                         android:layout_marginLeft="20dp"
                         android:textSize="20dp" />
-
-                    <EditText
-                        android:id="@+id/Text_time"
-                        android:layout_width="230dp"
+                    <TextView
+                        android:id="@+id/Order_Date"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:ems="10"
-                        android:gravity="left"
-                        android:hint="請輸入日期"
+                        android:gravity="center"
+                        android:text="2019/06/04"
+                        android:textColor="#000000"
                         android:layout_marginLeft="5dp"
-                        android:inputType="date"
-                        android:maxLength="15" />
+                        android:textSize="20dp" />
 
                 </LinearLayout>
-
-
-
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
@@ -159,17 +141,15 @@
                         android:textColor="#000000"
                         android:layout_marginLeft="20dp"
                         android:textSize="20dp" />
-
-                    <EditText
-                        android:id="@+id/Text_place"
-                        android:layout_width="230dp"
-                        android:layout_height="match_parent"
+                    <TextView
+                        android:id="@+id/Order_Place"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:text="台北車站"
+                        android:textColor="#000000"
                         android:layout_marginLeft="5dp"
-                        android:ems="10"
-                        android:gravity="left"
-                        android:hint="請輸入地點"
-                        android:inputType="text"
-                        android:maxLength="15" />
+                        android:textSize="20dp" />
 
                 </LinearLayout>
                 <LinearLayout
@@ -188,31 +168,28 @@
                         android:textColor="#000000"
                         android:layout_marginLeft="20dp"
                         android:textSize="20dp" />
-                    <EditText
-                        android:id="@+id/Text_phone"
-                        android:layout_width="230dp"
+                    <TextView
+                        android:id="@+id/Order_Phone"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:ems="13"
-                        android:gravity="left"
-                        android:hint="（xxxx-xxx-xxx）"
+                        android:gravity="center"
+                        android:text="(097) 382-6473"
+                        android:textColor="#000000"
                         android:layout_marginLeft="5dp"
-                        android:inputType="phone"
-                        android:maxLength="10" />
+                        android:textSize="20dp" />
 
                 </LinearLayout>
-
-
-
-                <EditText
-                    android:id="@+id/Text_detail"
+                <TextView
+                    android:id="@+id/Order_Detail"
                     android:layout_width="370dp"
-                    android:layout_height="134dp"
-                    android:ems="10"
-                    android:gravity="center"
-                    android:hint="備註（或備案）"
-                    android:inputType="textMultiLine"
+                    android:layout_height="wrap_content"
+                    android:gravity="left"
+                    android:text="夜晚雖然少了白天的明亮，不過每當夜色逐漸加深，僅留下街燈與奔馳而過的車輛一閃即逝的光亮，也因此晚上又是許多攝影好手們捕捉迷人影像的好時機，像是車子留下長長的光影，略帶著模糊又強烈的車軌，總是令許多攝影玩家醉心的題材之一！不過想要拍攝光軌，也是要選擇合適的地點，才能拍出你期待的照片，就帶著大家一起來蒐羅台北及新北有哪些絕佳的攝影地點，並以 EOS M6 迷你單眼作為拍攝範例，與粉絲們分享一些拍攝車軌夜景的小小技巧。 (Photo By 臺灣小角落 IG:j_h_ye) "
+                    android:textColor="#000000"
+                    android:layout_marginLeft="5dp"
+                    android:textSize="15dp"
                     android:background="@drawable/radius"
-                    android:maxLength="100" />
+                    android:padding="10dp"/>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
@@ -230,16 +207,15 @@
                         android:layout_marginLeft="20dp"
                         android:textSize="20dp" />
 
-                    <EditText
-                        android:id="@+id/Text_price"
-                        android:layout_width="230dp"
+                    <TextView
+                        android:id="@+id/Order_Price"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:ems="10"
-                        android:gravity="left"
-                        android:hint="請輸入最終價格"
-                        android:inputType="number"
+                        android:gravity="center"
+                        android:text="$1500"
+                        android:textColor="#000000"
                         android:layout_marginLeft="5dp"
-                        android:maxLength="6" />
+                        android:textSize="20dp" />
 
                 </LinearLayout>
 
@@ -247,41 +223,26 @@
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:layout_marginLeft="10dp"
-                    android:layout_marginTop="60dp"
                     android:layout_marginRight="10dp"
                     android:gravity="center"
                     android:orientation="horizontal">
-
-
                     <Button
                         android:id="@+id/clear"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:background="@drawable/radius"
-                        android:text="清空" />
+                        android:text="回訂單" />
 
                     <Button
-                        android:id="@+id/submit"
+                        android:id="@+id/button"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:background="@drawable/radius"
                         android:text="確認" />
-
                 </LinearLayout>
-
             </LinearLayout>
-
-
-
-
-
-
-
-
         </LinearLayout>
-
     </ScrollView>
-
 </RelativeLayout>
